# Tokyo-Downloader

./: .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  local-development.md  makefile-guide.md  running-tests.md
download-scripts/: wget-download.sh  yt-dlp-download.sh
tests/: conftest.py  test_main.py
tests/__snapshots__/: test_main.ambr
