[project]
name = "tokyo-downloader"
version = "1.0.0"
description = "Python tool to fetch anime download links from Tokyo Insider"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "MaJoRX0" }
]

dependencies = [
    "requests==2.32.3",
    "beautifulsoup4==4.13.3",
    "lxml==5.3.1",
    "typer>=0.17.0",
    "inquirer==3.4.0",
]

[project.scripts]
tokyo-downloader = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
    "ruff>=0.14.10",
    "syrupy>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
